# AIX

./: README.md
SPARK/: Dockerfile  README.md  chainlit.md  main.py  pyproject.toml
SPARK/app/: requirements.txt  sequential_transform_chain.py  spark.py
SPARK/notebooks/: chainlit_pinecone_demo.py  conversational_qa_sources.ipynb  index_data.ipynb
